# SC-Playtime-Tracker

./: .gitignore  Cargo.toml  README.md
docs/: leaderboard_deployment.md  windows_packaging.md
packaging/: Velopack.toml  package.ps1
src/: leaderboard.rs  lib.rs  main.rs  monitor.rs  settings.rs  startup.rs  storage.rs
