[package]
name = "star_citizen_playtime"
version = "1.0.1"
edition = "2024"
authors = ["Al1e"]
description = "Lightweight Star Citizen playtime tracker"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.30" }
uuid = { version = "1", features = ["serde", "v4"] }
eframe = "0.27"
rfd = "0.14"
egui_plot = "0.27"
once_cell = "1"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"
tray-icon = "0.9"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
